style: scss refactor, fixed QA scroll class main-screen was remained as main-container for clarity, style rules applying to both the start and the QA screen were refactored, QA-screen overflow was fixed and now has a vertical scroll

--- a/src/styles/_QA.scss
+++ b/src/styles/_QA.scss
@@ -1,10 +1,9 @@
 .QA {
-  width: 50vw;
+  // width: 50vw;
   font-family: $QA-text;
   color: $text-color;
   font-weight: 400;
   padding: 32px 0px;
-  // padding-bottom:20px;
   border-bottom: 1px solid $lines-color;
 
   h3 {
